vest-dsl/test/bad/byte_array_len_unbound.vest
fmt = {
  b: [u8; @a],
}
